fixing z-index for heading

--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ nav{
 
 .hero-section{
 //    background-image: url('#');
-
+//    overflow: hidden;
    min-width: 100vw;
     div{
         height: 50vh;
@@ -256,7 +256,6 @@ nav{
 
 
 .chartCont{
-    // max-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -267,16 +266,24 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
+    position: absolute;
     justify-content: center;
     overflow: hidden;
-    .skill-head{
-        position: relative;
-        pointer-events: none;   
-        font-size: 45px;
-        // display: none;
-    }
   }
+  .skill-head{
+    position: relative;
+    width:100%;
+    height: 100vh;
+    pointer-events: none;   
+    font-size: 105px;
+    z-index: 88;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to right , rgba(0,0,0,0.8) , rgba(0,0,0,0));
+    // background-color: rgba(255, 255, 255, 0.506);
+    // display: none;
+}
 }
 
 
